this resolves M68 and M69.  Spacing is much better now.

--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,15 @@
 #map-container {
   display:flex;
   flex-direction: row;
+  justify-content: space-around;
   text-align: center;
   padding: 0 auto;
   margin: 0 auto;
 }
 
 #directions-panel{
-  justify-content: space-around;
   background-color: lightgray;
+  margin-right: 1em;
 }
 
 body {
@@ -75,7 +76,7 @@ box-shadow:         inset 0 0 10px #000000;
   font-family: 'Roboto', sans-serif;
   text-align: center;
   font-size: 2.5em;
-  margin: 0 auto;
+  margin-bottom: 2 auto;
 }
 #list ul {
   padding: 0 auto;
